--- a/WebUI/Views/User/Index.cshtml
+++ b/WebUI/Views/User/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@{
     ViewBag.Title = "Index";
 }
-
 <h2>@Resources.Views.GeneralResource.GeneralText.ByeText</h2>
+    <input type="button" id="btn" value="Clickeame" />
+
+
+
+
