--- a/WebUI/Views/User/Index.cshtml
+++ b/WebUI/Views/User/Index.cshtml
@@ -5,6 +5,10 @@
 <script type="text/javascript">
     $(document).ready(function() {
         alert("Ya vitoco, comence a meterle mano un rato a esto XD");
+
+        $("#e").on('click', function() {
+            $("#btn").load("/user/create");
+        });
     });
 
     //esta funcion recibe el elemnto que se le hizo click, y un index para saber 
@@ -57,6 +61,19 @@
                                           UpdateTargetId = "Content",
                                           InsertionMode = InsertionMode.InsertBefore
                                       })
+
+
+
+<input type="button" id="e" value="presioname" />
+
+
+
+<div id="btn">
+    
+
+</div>
+
+
 
 <div id ="Content">
    
