--- a/WebUI/Views/Shared/_Layout.cshtml
+++ b/WebUI/Views/Shared/_Layout.cshtml
@@ -32,17 +32,17 @@
                         </li>
                         <li class="photos">
                             <a href="" style="margin-top: -80px;">
-                                <span>Photos</span>
+                                <span>Home</span>
                             </a>
                         </li>
                         <li class="rssfeed">
                             <a href="" style="margin-top: -80px;">
-                                <span>Rss Feed</span>
+                                <span>Config</span>
                             </a>
                         </li>
                         <li class="podcasts">
                             <a href="" style="margin-top: -80px;">
-                                <span>Podcasts</span>
+                                <span>Home</span>
                             </a>
                         </li>
                         <li class="contact">
