PROBANDO DESDE VISUAL

--- a/WebUI/Views/TestAjax/Index.cshtml
+++ b/WebUI/Views/TestAjax/Index.cshtml
@@ -5,7 +5,7 @@
 <script type="text/javascript">
       
     function TraerDatosSinParametros(idElement) {
-
+        //PROBANDO DESDE VISUAL
 
         $.ajax({
             url: "/TestAjax/TestFromJqueryJson",
